--- a/DearFutureMeV3-main/app/src/main/res/layout/activity_main.xml
+++ b/DearFutureMeV3-main/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
         android:layout_marginTop="15dp"
         android:background="@drawable/corner_radius"
         android:ems="10"
-        android:hint="Username or Email"
+        android:hint="Email"
         android:textColorHint="@color/grey"
         android:textColor="@color/black"
         android:inputType="textEmailAddress"
