--- a/DearFutureMeV3-main/app/src/main/res/layout/viewholder_capsulelist.xml
+++ b/DearFutureMeV3-main/app/src/main/res/layout/viewholder_capsulelist.xml
@@ -3,18 +3,55 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="wrap_content">
 
     <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/IvCapsule"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
+        android:layout_margin="15dp"
         android:clickable="true"
         android:focusable="true"
+        android:scaleType="fitCenter"
+        android:src="@drawable/draft_capsule"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/capsule" />
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/tvTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        android:elevation="10dp"
+        android:fontFamily="@font/poppins_bold"
+        android:text="A letter to my self"
+        android:textColor="@color/titleColor"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/IvCapsule"
+        app:layout_constraintEnd_toEndOf="@+id/IvCapsule"
+        app:layout_constraintStart_toStartOf="@+id/IvCapsule" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="67dp"
+        android:layout_height="72dp"
+        android:contentDescription="TODO"
+        android:clickable="true"
+        android:focusable="true"
+        app:layout_constraintBottom_toBottomOf="@+id/IvCapsule"
+        app:layout_constraintEnd_toEndOf="@+id/IvCapsule"
+        app:layout_constraintStart_toStartOf="@+id/IvCapsule"
+        app:layout_constraintTop_toTopOf="@+id/IvCapsule"
+        app:srcCompat="@drawable/unlocked_pad" />
+
+    <ImageView
+        android:id="@+id/shareBtn"
+        android:layout_width="77dp"
+        android:layout_height="75dp"
+        android:clickable="true"
+        android:focusable="true"
+        app:layout_constraintEnd_toEndOf="@+id/IvCapsule"
+        app:layout_constraintTop_toTopOf="@+id/IvCapsule"
+        app:srcCompat="@drawable/share_button" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
