--- a/DearFutureMeV3-main/app/src/main/res/values/colors.xml
+++ b/DearFutureMeV3-main/app/src/main/res/values/colors.xml
@@ -7,5 +7,8 @@
     <color name="loginBackground_color">#F4D9FF</color>
     <color name="grey">#5F5C5C</color>
     <color name="pink">#9F0DBC</color>
+    <color name="colorAccent">#F25597</color>
+    <color name="colorPrimary">#FFFFFFFF</color>
+    <color name="titleColor">#2B1253</color>
 
 </resources>
