--- a/DearFutureMeV3-main/app/src/main/res/layout/activity_create_capsule.xml
+++ b/DearFutureMeV3-main/app/src/main/res/layout/activity_create_capsule.xml
@@ -29,7 +29,7 @@
                 android:layout_height="match_parent">
 
                 <TextView
-                    android:id="@+id/textView13"
+                    android:id="@+id/tvMyCapsule"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="44dp"
@@ -43,10 +43,10 @@
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btn_back"
-                    android:layout_width="37dp"
-                    android:layout_height="32dp"
+                    android:layout_width="36dp"
+                    android:layout_height="27dp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginBottom="4dp"
+                    android:layout_marginBottom="8dp"
                     android:background="@drawable/baseline_arrow_back_ios_24"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -85,6 +85,47 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="25dp"
+                        android:fontFamily="@font/poppins_medium"
+                        android:text="Add your images"
+                        android:textColor="@color/white"
+                        android:textSize="20sp" />
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/addImageBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Add"/>
+
+                </LinearLayout>
+                <!-- GridLayout for Image Placeholders (3x3 grid) -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recyclerViewImage"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:layout_marginHorizontal="25dp"
+                        android:layout_marginTop="10dp"/>
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="25dp"
                 android:orientation="vertical">
@@ -113,26 +154,67 @@
                     android:textColor="@color/white"
                     android:textColorHint="@color/grey" />
 
-                <TextView
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:fontFamily="@font/poppins_medium"
-                    android:text="Unlock time"
-                    android:textColor="@color/white"
-                    android:textSize="20sp" />
+                    android:layout_marginBottom="10dp"
+                    android:orientation="horizontal">
 
-                <EditText
-                    android:id="@+id/dateSchedule"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/edittext_bg"
-                    android:focusable="false"
-                    android:hint="mm / dd / yy"
-                    android:inputType="datetime"
-                    android:padding="15dp"
-                    android:textColor="@color/white"
-                    android:textColorHint="@color/grey" />
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="95dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:fontFamily="@font/poppins_medium"
+                            android:text="Date"
+                            android:gravity="center"
+                            android:textColor="@color/white"
+                            android:textSize="20sp" />
+
+                        <EditText
+                            android:id="@+id/dateSchedule"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/edittext_bg"
+                            android:focusable="false"
+                            android:hint="mm / dd / yy"
+                            android:inputType="datetime"
+                            android:padding="15dp"
+                            android:textColor="@color/white"
+                            android:textColorHint="@color/grey" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:fontFamily="@font/poppins_medium"
+                            android:text="Time"
+                            android:gravity="center"
+                            android:textColor="@color/white"
+                            android:textSize="20sp" />
+                        <EditText
+                            android:id="@+id/timeSchedule"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/edittext_bg"
+                            android:focusable="false"
+                            android:hint="00 : 00 : 00"
+                            android:inputType="datetime"
+                            android:padding="15dp"
+                            android:textColor="@color/white"
+                            android:textColorHint="@color/grey" />
+
+                    </LinearLayout>
+                </LinearLayout>
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/draftBtn"
@@ -157,6 +239,23 @@
                     android:textColor="@color/white"
                     android:textSize="15dp" />
             </LinearLayout>
+
+            <EditText
+                android:id="@+id/receiverEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="150dp"
+                android:ems="10"
+                android:inputType="text"
+                android:hint="Email"
+                android:layout_marginHorizontal="25dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/edittext2_bg"
+                android:textColorHint="@color/grey"
+                android:padding="15dp"
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
