--- a/DearFutureMeV3-main/app/src/main/res/layout/activity_signupui.xml
+++ b/DearFutureMeV3-main/app/src/main/res/layout/activity_signupui.xml
@@ -70,22 +70,11 @@
         app:layout_constraintStart_toStartOf="@+id/etEmailAddress"
         app:layout_constraintTop_toBottomOf="@+id/etEmailAddress" />
 
-    <CheckBox
-        android:id="@+id/termsCheckBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="I agree to the terms of Services and Privacy \nPolicy"
-        android:textColor="@android:color/white"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="@+id/etPassword"
-        app:layout_constraintStart_toStartOf="@+id/etPassword"
-        app:layout_constraintTop_toBottomOf="@+id/etPassword" />
-
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/signupBtn"
         android:layout_width="350dp"
         android:layout_height="60dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/create_btn"
         android:fontFamily="@font/poppins_semibold"
         android:text="Sign Up"
@@ -93,11 +82,11 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/etPassword"
         app:layout_constraintStart_toStartOf="@+id/etPassword"
-        app:layout_constraintTop_toBottomOf="@+id/termsCheckBox" />
+        app:layout_constraintTop_toBottomOf="@+id/etPassword" />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="261dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
         android:fontFamily="@font/poppins"
@@ -105,8 +94,8 @@
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/signupBtn"
+        app:layout_constraintStart_toStartOf="@+id/signupBtn"
         app:layout_constraintTop_toBottomOf="@+id/signupBtn" />
 
     <androidx.appcompat.widget.AppCompatButton
