--- a/DearFutureMeV3-main/app/src/main/res/layout/fragment_shared__capsule.xml
+++ b/DearFutureMeV3-main/app/src/main/res/layout/fragment_shared__capsule.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="60dp"
         android:layout_marginRight="20dp">
 
         <TextView
@@ -20,17 +20,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_bold"
-            android:text="Shared Capsules"
+            android:text="Received Capsules"
+            android:textColor="@color/black"
             android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/backbtn"
-            android:layout_width="43dp"
-            android:layout_height="34dp"
-            android:background="@drawable/baseline_arrow_back_ios_24"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -49,36 +42,19 @@
 
         <TextView
             android:id="@+id/textView15"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_width="348dp"
+            android:layout_height="83dp"
+            android:layout_marginTop="32dp"
             android:fontFamily="@font/poppins_semibold"
             android:gravity="center"
             android:lineSpacingExtra="5dp"
             android:text="The capsules shared with you will appear here \n Receive capsules from other users by sharing \n your username"
-            android:textSize="14dp"
             android:textColor="@color/black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:textSize="14dp"
+            app:layout_constraintEnd_toEndOf="@+id/textView12"
+            app:layout_constraintStart_toStartOf="@+id/textView12"
             app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/viewbtn"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_marginTop="14dp"
-            android:background="@drawable/btn_gradient"
-            android:fontFamily="@font/poppins_semibold"
-            android:gravity="center"
-            android:paddingHorizontal="20dp"
-            android:text="View username"
-            android:textColor="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView15" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 </FrameLayout>
