--- a/DearFutureMeV3-main/app/src/main/res/menu/bottom_nav.xml
+++ b/DearFutureMeV3-main/app/src/main/res/menu/bottom_nav.xml
@@ -4,16 +4,11 @@
     <item
         android:title=""
         android:id="@+id/home"
-        android:icon="@drawable/baseline_home_24"
+        android:icon="@drawable/home_fill"
         />
     <item
         android:title=""
-        android:id="@+id/profile"
-        android:icon="@drawable/baseline_person_24"
-        />
-    <item
-        android:title=""
-        android:id="@+id/settings"
-        android:icon="@drawable/baseline_settings_24"
+        android:id="@+id/sharedCapsules"
+        android:icon="@drawable/send_fill"
         />
 </menu>
